--- a/笔记.md
+++ b/笔记.md
@@ -32,3 +32,12 @@ if语句：
     {
       语句m；
     }
+
+
+
+***问题：
+	1.scanf:
+ 		scanf输入时不用“，”
+	 		eg:scanf("%d,%d\n"&a,&b);
+				键盘输入“1 2”时，输出结果为“a=1，b=32766”
+				必须键盘输入“1,2”，才能输出“a=1，b=2”
