--- a/笔记.md
+++ b/笔记.md
@@ -37,6 +37,22 @@ if语句：
       语句m；
     }
 
+switch语句：	
+	1.语句：
+		switch(表达式)
+		{
+ 			case 常量表达式1：语句1；break;
+	 		case 常量表达式2：语句2；break;
+    	         ...
+		 	case 常量表达式n：语句n；break;
+	 		defaut:语句m;
+		}
+	2.规则：
+ 		表达式必须为整数值；
+	 	常量表达式也必须为整数且不可相同；
+	 	break用来跳出switch语句，不加会继续向下运行
+	 
+
 
 
 ***问题：
