--- a/笔记.md
+++ b/笔记.md
@@ -51,6 +51,12 @@ switch语句：
  		表达式必须为整数值；
 	 	常量表达式也必须为整数且不可相同；
 	 	break用来跳出switch语句，不加会继续向下运行
+
+xxxx：
+goto语句：
+	goto 行标志（语句标志）
+ 		eg:goto xxxx;  //跳转到55行的“xxxx：”开始执行
+	一般配合if使用，避免死循环
 	 
 
 
