--- a/笔记.md
+++ b/笔记.md
@@ -57,8 +57,13 @@ goto语句：
 	goto 行标志（语句标志）
  		eg:goto xxxx;  //跳转到55行的“xxxx：”开始执行
 	一般配合if使用，避免死循环
-	 
 
+while语句：
+	while(判断表达式)
+	{
+		循环体语句；
+	}
+	判断表达式（真）→执行循环体→判断表达式.....
 
 
 ***问题：
