--- a/笔记.md
+++ b/笔记.md
@@ -65,6 +65,13 @@ while语句：
 	}
 	判断表达式（真）→执行循环体→判断表达式.....
 
+do while语句：
+	do
+ 	{
+		循环体语句；
+	}while(判断表达式)
+ 	执行循环体→判断表达式（真）→执行循环体→判断表达式.....
+
 
 ***问题：
 	1.scanf:
