--- a/笔记.md
+++ b/笔记.md
@@ -72,6 +72,15 @@ do while语句：
 	}while(判断表达式)
  	执行循环体→判断表达式（真）→执行循环体→判断表达式.....
 
+for循环语句：
+	for(表达式1；表达式2；表达式3)
+ 	{
+		循环体语句；
+	}
+ 	规则：
+		首先先执行表达式1（只执行这一遍），然后判断表达式2，如果成立执行循环体语句，执行表达式3，再进行表达式2判断.....
+		表达式可以省略，但是“；”不可以省略，表达式2省略表示判断永久为真，即死循环
+
 
 ***问题：
 	1.scanf:
