--- a/笔记.md
+++ b/笔记.md
@@ -88,3 +88,7 @@ for循环语句：
 	 		eg:scanf("%d,%d\n"&a,&b);
 				键盘输入“1 2”时，输出结果为“a=1，b=32766”
 				必须键盘输入“1,2”，才能输出“a=1，b=2”
+
+	2.break/continue:
+ 		break:用于switch和循环语句，用来跳出switch或者跳出所属循环
+	 	continue:只能用在循环体中，结束本次循环继续进行下一次循环
